compiler-core/src/go/tests/snapshots/gleam_core__go__tests__bit_arrays__empty.snap
---
source: compiler-core/src/go/tests/bit_arrays.rs
assertion_line: 5
expression: "\nfn go() {\n  <<>>\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go() {
  <<>>
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func goʹ() gleam_P.BitArray_t {
  return gleam_P.ToBitArray()
}
