compiler-core/src/go/tests/snapshots/gleam_core__go__tests__bit_arrays__explicit_sized_constant_value.snap
---
source: compiler-core/src/go/tests/bit_arrays.rs
assertion_line: 214
expression: "\nfn go() {\n  <<256:size(32)>>\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go() {
  <<256:size(32)>>
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func goʹ() gleam_P.BitArray_t {
  return gleam_P.ToBitArray([]byte{0, 0, 1, 0})
}
