compiler-core/src/go/tests/snapshots/gleam_core__go__tests__bit_arrays__float_sized_little_endian.snap
---
source: compiler-core/src/go/tests/bit_arrays.rs
expression: "\nfn go() {\n  <<1.1:float-32-little>>\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go() {
  <<1.1:float-32-little>>
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func goʹ() gleam_P.BitArray_t {
  return gleam_P.ToBitArray(gleam_P.SizedFloat(1.1, 32, false))
}
