compiler-core/src/go/tests/snapshots/gleam_core__go__tests__bit_arrays__integer.snap
---
source: compiler-core/src/go/tests/bit_arrays.rs
expression: "\nfn go() {\n  <<256:int>>\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go() {
  <<256:int>>
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func goʹ() gleam_P.BitArray_t {
  return gleam_P.ToBitArray([]byte{0})
}
