compiler-core/src/go/tests/snapshots/gleam_core__go__tests__bit_arrays__match_float_sized.snap
---
source: compiler-core/src/go/tests/bit_arrays.rs
expression: "\nfn go(x) {\n  let assert <<a:float-32, b:int>> = x\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go(x) {
  let assert <<a:float-32, b:int>> = x
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func goʹ(x gleam_P.BitArray_t) gleam_P.BitArray_t {
  if !(len(x) == 5) {
    panic(gleam_P.MakeError(
      "let_assert",
      "my/mod",
      3,
      "go",
      "Pattern match failed, no pattern matched the value.",
      map[string]any{"value": x },
    ))
  }
  var a gleam_P.Float_t = x.FloatFromSlice(0, 4, true)
  _ = a
  var b gleam_P.Int_t = x.ByteAt(4)
  _ = b
  return x
}
